# findme

./: .coveragerc  .travis.yml  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml
findme/: __init__.py  __main__.py  _cli.py
findme/tests/: test_findme.py
